# TritSet

./: .gitmodules  CMakeLists.txt  Trit.cpp  Trit.h  TritSet.cpp  TritSet.h  main.cpp
Google_tests/: CMakeLists.txt  tests.cpp
TritSet_lib/: CMakeLists.txt  TritSet.cpp  TritSet.h
